<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:paddingHorizontal="16dp"
    tools:context=".HomeActivity">
    
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/fieldPrice"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="40dp"
        app:placeholderText="Rp1000"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/inputPrice"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/label_price"
            android:inputType="number"
            tools:ignore="TextContrastCheck"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/fieldDiscount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        app:layout_constraintTop_toBottomOf="@id/fieldPrice"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp"
        app:placeholderText="50%"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/inputDiscountPercentage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/label_discount"
            android:inputType="number"
            tools:ignore="TextContrastCheck"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btnCount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_count"
        android:textAllCaps="false"
        style="@style/Widget.MaterialComponents.Button"
        app:layout_constraintTop_toBottomOf="@id/fieldDiscount"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp"
        />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/row1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/btnCount"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="24dp"
        >

        <TextView
            android:id="@+id/tvDiscounts"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_discounts"
            android:textAlignment="textStart"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            />

        <TextView
            android:id="@+id/tvResultDiscounts"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_result_after_discount"
            android:textSize="16sp"
            android:textColor="@color/purple_700"
            android:textAlignment="textEnd"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/row2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/row1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp"
        >

        <TextView
            android:id="@+id/tvAfterDiscount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_after_discount"
            android:textAlignment="textStart"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            />

        <TextView
            android:id="@+id/tvResultAfterDiscount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_result_after_discount"
            android:textAlignment="textEnd"
            android:textColor="@color/purple_700"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <Button
        android:id="@+id/btnExit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_exit"
        android:textAllCaps="false"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        app:layout_constraintTop_toBottomOf="@id/row2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="40dp"
        />

</androidx.constraintlayout.widget.ConstraintLayout>